--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-avatar": "^5.0.4",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
